--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -10,6 +10,16 @@ archer:
   email: duchess@example.gov
   password_digest: <%= User.digest('password') %>
 
+malory:
+  name: Malory Example
+  email: malory@example.com
+  password_digest: <%= User.digest('password') %>
+
+lana:
+  name: Lana Example
+  email: lana@example.com
+  password_digest: <%= User.digest('password') %>
+
 <% 30.times do |n| %>
 user_<%= n %>:
   name: <%= "User #{n}" %>
